--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "marked": "^7.0.2",
     "marked-plaintext": "^0.0.2",
     "sharp": "^0.32.1",
+    "tailwindcss": "^3.4.13",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
