--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,10 +1,10 @@
 {
   "copyright": "",
-  "theme": "light",
+  "theme": "dark",
   "fundingText": "",
-  "author": "Author's name",
-  "name": "Podcast Name",
-  "banner": "/banner.webp",
+  "author": "Andrés Tobío",
+  "name": "ElSaltoWeb Podcast",
+  "banner": "/portada2.jpg",
   "pageSize": 15,
   "fundingUrl": "",
   "owner": "",
@@ -13,11 +13,8 @@
   "cover": "/cover.jpg",
   "language": "en",
   "link": "https://your-website-url.netlify.app",
-  "email": "your.email@gmail.com",
-  "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
-  "category": [
-    "Technology",
-    "Business"
-  ],
+  "email": "atobio459@gmail.com",
+  "description": "Este Podcast demuestra las posibilidades de establecer tu propia plataforma de emisión.",
+  "category": ["Technology", "Business"],
   "feedSize": ""
 }
