--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -12,7 +12,7 @@
   "explicit": false,
   "cover": "/cover.jpg",
   "language": "en",
-  "link": "https://your-website-url.netlify.app",
+  "link": "https://burcolic-parfait-1ce9c3.netlify.app",
   "email": "atobio459@gmail.com",
   "description": "Este Podcast demuestra las posibilidades de establecer tu propia plataforma de emisión.",
   "category": ["Technology", "Business"],
