--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -14,7 +14,7 @@
   "language": "en",
   "link": "https://burcolic-parfait-1ce9c3.netlify.app",
   "email": "atobio459@gmail.com",
-  "description": "Este Podcast demuestra las posibilidades de establecer tu propia plataforma de emisión.",
+  "description": "Bienvenidos a ElSaltoWeb PodCast si quieres tener el tuyo contactanos a atobio459@gmail.com.",
   "category": ["Technology", "Business"],
   "feedSize": ""
 }
