--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git-gateway
+  name: github
   branch: main # O el nombre de la rama que usas
 
 media_folder: "public/audio" # Carpeta donde se subirán los archivos de audio
